@@ -15,25 +15,35 @@
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA
  *******************************************************************************/
-package panamagl.os.macos.x86_64;
+package panamagl.os.macos;
 
-import panamagl.os.Platform;
+import java.lang.foreign.ValueLayout;
+import org.junit.Test;
+import junit.framework.Assert;
 
-public class MacOSTest {
-  /**
-   * Indicate a message in console if not running on macos
-   * @return
-   */
-  public boolean checkPlatform() {
-    Platform os = new Platform();
-    boolean ismacos = os.isMac();
+//VM ARGS : -XstartOnFirstThread --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign -Djava.library.path=.:/System/Library/Frameworks/OpenGL.framework/Versions/Current/Libraries/
 
-    if(!ismacos) {
-      System.err.println(" !! \n    Skip test since not on macOS : " + os + "\n !!");
-    }
+public class TestCGLContext extends MacOSTest{
+  @Test
+  public void createCGLContext() {
+    if (!checkPlatform())
+      return;
     
-    return ismacos;
-  }
-  
+    // Given
+    CGLContext_macOS cgl = new CGLContext_macOS();
+    
+    // When
+    cgl.init();
+    
+    
+    // Then
+    int[] attribs = cgl.attribs.toArray(ValueLayout.JAVA_INT);
+    Assert.assertEquals(73, attribs[0]); // 
+    Assert.assertEquals(99, attribs[1]);
+    Assert.assertEquals(12800, attribs[2]); // OpenGL version
+    Assert.assertEquals(0, attribs[3]);
 
+    // Cleanup
+    cgl.destroy();
+  }
 }
